# messengers-summarizer

./: .gitignore  README.md  llama3.py  main.py  pyproject.toml  telegram_methods.py
src/: const.py  llm.py  utils.py
src/messengers/: base_messenger.py  messenger_factory.py
src/messengers/providers/: telegram.py
